tests/snapshots/gql_snapshots__parse_where_equals_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
where_clause:
  expression:
    BinaryOp:
      left:
        Property:
          variable: n
          property: name
      op: Eq
      right:
        Literal:
          String: Alice
return_clause:
  distinct: false
  items:
    - expression:
        Variable: n
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
