tests/snapshots/gql_snapshots__parse_where_in_list_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
optional_match_clauses: []
where_clause:
  expression:
    InList:
      expr:
        Property:
          variable: n
          property: status
      list:
        - Literal:
            String: active
        - Literal:
            String: pending
      negated: false
return_clause:
  distinct: false
  items:
    - expression:
        Variable: n
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
